<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mirea.privalov.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mirea.privalov.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mirea.privalov.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/dataFragment"
        android:name="com.mirea.privalov.mireaproject.ui.Data.DataFragment"
        android:label="@string/menu_data"
        tools:layout="@layout/fragment_data" />
    <fragment
        android:id="@+id/webView"
        android:name="com.mirea.privalov.mireaproject.ui.WebView.FragmentWeb"
        android:label="@string/menu_webview"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/BMIFragment"
        android:name="com.mirea.privalov.mireaproject.ui.BMI.BMIFragment"
        android:label="@string/menu_service" />
    <fragment
        android:id="@+id/accelerometerFragment"
        android:name="com.mirea.privalov.mireaproject.ui.accelerometer.AccelerometerFragment"
        android:label="@string/menu_accelerometer"
        tools:layout="@layout/fragment_accelerometer" />
    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.mirea.privalov.mireaproject.ui.Camera.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera"/>
    <fragment
        android:id="@+id/audioRecordFragment"
        android:name="com.mirea.privalov.mireaproject.ui.audiorecord.AudioRecordFragment"
        android:label="@string/menu_record"
        tools:layout="@layout/fragment_audio_record" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.mirea.privalov.mireaproject.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/fileHandlingFragment"
        android:name="com.mirea.privalov.mireaproject.ui.FileHandling.FileHandlingFragment"
        android:label="@string/menu_file"
        tools:layout="@layout/fragment_file_handling"/>
    <activity
        android:id="@+id/authorization"
        android:name="com.mirea.privalov.mireaproject.authorization"
        android:label="@string/menu_auth"
        tools:layout="@layout/activity_authorization" />
    <fragment
        android:id="@+id/jokeFragment"
        android:name="com.mirea.privalov.mireaproject.ui.API.JokeFragment"
        android:label="@string/menu_joke"
        tools:layout="@layout/fragment_joke" />
    <fragment
        android:id="@+id/placesFragment"
        android:name="com.mirea.privalov.mireaproject.ui.PlacesFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_places" />
</navigation>