<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authorization">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="115dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/flash" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emailpassword_title_text"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#D2D3D3">

        <LinearLayout
            android:id="@+id/linearSignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="email"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/signInButton"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="password"
                    android:inputType="textPassword"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/createAccountButton"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSignOut"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/signOutButton"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_out"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/verifyEmailButton"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/verify_email"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
